# j-feature-store

./: .env  .gitignore  ARCHITECTURE.md  CONSUMING.md  MONITORING.md  QUICKSTART.md  README.md  TESTING.md  TESTS.md  architecture.drawio  architecture_mermaid.drawio  docker-compose.test.yml  docker-compose.yml
backend/: .coverage  .flake8  Dockerfile  Dockerfile.test  check_db.py  coverage.xml  feature_data.json  mypy.ini  pyproject.toml  pytest.ini  requirements.txt  setup.py  test_data.json  value_data.json
backend/app/: main.py
backend/app/api/v1/: __init__.py  feature_groups.py  features.py  monitoring.py  pipelines.py
backend/app/config/: README.md  datasources.yaml  settings.py
backend/app/connectors/: base.py
backend/app/core/: config.py  exceptions.py  feature_processor.py  security.py  store.py  validation.py
backend/app/db/: __init__.py  init-mongo.js  mongodb.py
backend/app/models/: feature.py  feature_group.py  pipeline.py
backend/app/monitoring/: metrics.py
backend/app/registry/: __init__.py  feature_registry.py  registry.py  validation.py  version.py
backend/app/routers/: features.py  monitoring.py
backend/app/schemas/: feature.py
backend/app/services/: feature_store.py  pipeline_service.py
backend/app/transformations/: __init__.py  base.py  categorical.py  numeric.py  temporal.py
backend/migrations/: V1__initial.sql
backend/scripts/: clean_data.py  create_sample_data.py  create_sample_features.py
backend/tests/: conftest.py  locustfile.py  test_features.py  test_monitoring.py
backend/tests/e2e/: test_e2e.py
backend/tests/integration/: test_feature_store.py  test_mongodb_integration.py
backend/tests/performance/: test_performance.py
backend/tests/security/: test_security.py
backend/tests/unit/: test_feature.py  test_feature_processor.py  test_mongodb.py  test_registry.py  test_transformations.py  test_validation.py
cli/: fstore.py
(+74 files in other folders)
